--- a/parts/res/values-it-rIT/strings.xml
+++ b/parts/res/values-it-rIT/strings.xml
@@ -40,4 +40,10 @@
     <string name="reset_default_button_summary">Resetta tutte le impostazioni di questa schermata</string>
     <string name="contrast_slider_title">Contrasto</string>
 
+    <!-- Vibration -->
+    <string name="vibration_control_title">Controllo vibrazione</string>
+    <string name="vibration_control_summary">Regola intensità vibrazione</string>
+    <string name="vibration_reset">Imposta il valore predefinito</string>
+    <string name="vibration_control_description">Imposta l\'intensità della vibrazione per feedback aptico, chiamate in entrata e notifiche</string>
+
 </resources>
